examples/test/testpolicy11089.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11089
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key45: value9
      key47: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value13
          key4: value10
      podSelector:
        matchLabels:
          key32: value28
          key23: value1
          key8: value37
